--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <!-- ===== Tab Icon ===== -->
     <link rel="icon" href="assets/2022-11-10.jpg">
 
-    <title>WestPremiumAuto Website</title>
+    <title>WestPremiumAuto</title>
 </head>
 
 <body>
@@ -54,8 +54,8 @@
             <div class="home__container bd-container bd-grid">
                 <div class="home__data">
                     <span class="home__greeting">Car Detailing </span>
-                    <h1 class="home__name">West Premium</h1>
-                    <span class="home__profession">Auto</span>
+                    <h1 class="home__name">West Premium Auto</h1>
+                    <span class="home__profession">...</span>
                     <a download="" href="assets/" target="_blank"
                         class="button button-light home__button">More about us</a>
                 </div>
