--- a/index.html
+++ b/index.html
@@ -55,9 +55,8 @@
                 <div class="home__data">
                     <span class="home__greeting">Car Detailing </span>
                     <h1 class="home__name">West Premium Auto</h1>
-                    <span class="home__profession">...</span>
                     <a download="" href="assets/" target="_blank"
-                        class="button button-light home__button">More about us</a>
+                        class="button button-light home__button">Book an appoinment</a>
                 </div>
 
                 <div class="home__social">
