--- a/index.html
+++ b/index.html
@@ -457,6 +457,11 @@
                     <textarea id="message" name="message" cols="0" rows="7" placeholder="Message" class="contact__input" required></textarea>
 
                     <input type="submit" value="Send Message" class="button contact__button">
+
+                    <!-- Calendly inline widget begin -->
+<div class="calendly-inline-widget" data-url="https://calendly.com/willdelf2003?hide_landing_page_details=1&hide_gdpr_banner=1" style="min-width:420px;height:200px;"></div>
+<script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" async></script>
+<!-- Calendly inline widget end -->
                 </form>
             </div>
         </section>
