--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
                 <div class="home__data">
                     <span class="home__greeting">Car Detailing </span>
                     <h1 class="home__name">West Premium Auto</h1>
+                    <span class="home__profession" style="transform: translate(0px, 0px); opacity: 1;">It's all in the details</span>
                     <a download="" href="assets/" target="_blank"
                         class="button button-light home__button">Book an appoinment</a>
                 </div>
@@ -62,8 +63,8 @@
                     <a href="https://www.instagram.com/" target="_blank" class="home__social-icon"><i
                             class='bx bxl-instagram'></i></a>
 
-                    <a href="https://github.com/" class="home__social-icon" target="_blank"><i
-                            class='bx bxl-github'></i></a>
+                    <a href="https://facebook.com/" class="home__social-icon" target="_blank"><i
+                            class='bx bxl-facebook'></i></a>
 
                     <a href="https://twitter.com/" class="home__social-icon" target="_blank"><i
                             class='bx bxl-twitter'></i></a>
@@ -435,7 +436,7 @@
                         </div>
                     </div>
                 </div>
-
+<!--
                 <form action="" class="contact__form">
                     <div class="contact__inputs">
                         <label for="name" class="contact__label">Name</label>
@@ -457,11 +458,12 @@
                     <textarea id="message" name="message" cols="0" rows="7" placeholder="Message" class="contact__input" required></textarea>
 
                     <input type="submit" value="Send Message" class="button contact__button">
-
+ -->
                     <!-- Calendly inline widget begin -->
-<div class="calendly-inline-widget" data-url="https://calendly.com/willdelf2003?hide_landing_page_details=1&hide_gdpr_banner=1" style="min-width:420px;height:200px;"></div>
-<script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" async></script>
-<!-- Calendly inline widget end -->
+                <div class="calendly-inline-widget" data-url="https://calendly.com/willdelf2003/car-detailing?hide_event_type_details=1&hide_gdpr_banner=1" style="min-width:320px;height:600px;"></div>
+                <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" async></script>
+                <!-- Calendly inline widget end -->
+
                 </form>
             </div>
         </section>
@@ -474,12 +476,12 @@
             <p class="footer__description">It's all in the details</p>
 
             <div class="footer__social">
-                <a href="https://www.linkedin.com/in/" target="_blank" class="footer__link"><i
-                        class='bx bxl-linkedin'></i></a>
-                <a href="https://github.com/Willdelf" target="_blank" class="footer__link"><i
-                        class='bx bxl-github'></i></a>
-                <a href="https://dribbble.com/" target="_blank" class="footer__link"><i
-                        class='bx bxl-dribbble'></i></a>
+                <a href="https://instagram.com/" target="_blank" class="footer__link"><i
+                        class='bx bxl-instagram'></i></a>
+                <a href="https://facebook.com/" target="_blank" class="footer__link"><i
+                        class='bx bxl-facebook'></i></a>
+                <a href="https://twitter.com" target="_blank" class="footer__link"><i
+                        class='bx bxl-twitter'></i></a>
             </div>
             <p class="footer__copy">&#169; Copyright 2021 Willdelf, All rights reserved</p>
         </div>
