--- a/index.html
+++ b/index.html
@@ -55,8 +55,7 @@
                     <span class="home__greeting">Car Detailing </span>
                     <h1 class="home__name">West Premium Auto</h1>
                     <span class="home__profession" style="transform: translate(0px, 0px); opacity: 1;">It's all in the details</span>
-                    <a download="" href="assets/" target="_blank"
-                        class="button button-light home__button">Book an appoinment</a>
+                    <a href="#contact" class="button button-light home__button">Book an appointment</a>
                 </div>
 
                 <div class="home__social">
@@ -267,8 +266,8 @@
                 <div class="project__data">
                     <i class='bx bx-chat project__icon'></i>
                     <div>
-                        <h2 class="project__title">Project in Mind</h2>
-                        <p class="project__description">Tell me about your ideas and let's try to make them real</p>
+                        <h2 class="project__title">View Availability</h2>
+                        <p class="project__description">Tell us what you want and we'll make it real</p>
                     </div>
 
                     <div>
@@ -295,9 +294,9 @@
                 <div class="portfolio__content mix web">
                     <a href="#contact"><img src="assets/img/work1.png" alt="" class="portfolio__img"></a>
                     <div class="portfolio__data">
-                        <span class="portfolio__subtitle">Web Development</span>
+                        <span class="portfolio__subtitle">Picture</span>
                         <a href="#contact">
-                            <h2 class="portfolio__title">Responsive Portfolio</h2>
+                            <h2 class="portfolio__title">?</h2>
                         </a>
                         <a href="#contact" class="button button-link">View Details</a>
                     </div>
@@ -307,9 +306,9 @@
                 <div class="portfolio__content mix web">
                     <a href="#contact"><img src="assets/img/work2.jpg" alt="" class="portfolio__img"></a>
                     <div class="portfolio__data">
-                        <span class="portfolio__subtitle">Web Development</span>
+                        <span class="portfolio__subtitle">Picture</span>
                         <a href="#contact">
-                            <h2 class="portfolio__title">New portfolio of work done for a client</h2>
+                            <h2 class="portfolio__title">?</h2>
                         </a>
                         <a href="#contact" class="button button-link">View Details</a>
                     </div>
@@ -319,9 +318,9 @@
                 <div class="portfolio__content mix ux">
                     <a href="#contact"><img src="assets/img/work3.jpg" alt="" class="portfolio__img"></a>
                     <div class="portfolio__data">
-                        <span class="portfolio__subtitle">UI/UX Design</span>
+                        <span class="portfolio__subtitle">Picture</span>
                         <a href="#contact">
-                            <h2 class="portfolio__title">New portfolio of work done for a client</h2>
+                            <h2 class="portfolio__title">?</h2>
                         </a>
                         <a href="#contact" class="button button-link">View Details</a>
                     </div>
@@ -329,10 +328,10 @@
 
                 <!-- Item 4 -->
                 <div class="portfolio__content mix ux">
-                    <a href="#contact"><img src="assets/img/building-architecture-black-and-white-preview.jpg" alt="" class="portfolio__img"></a>
                     <div class="portfolio__data">
-                        <span class="portfolio__subtitle">?</span>
+                        <span class="portfolio__subtitle">Picture</span>
                         <a href="#contact">
+                            <a href="#contact"><img src="assets/img/wallpaper-dark-urban-surface-background-ai-generated-photo.jpg" alt="" class="portfolio__img"></a>
                             <h2 class="portfolio__title">?</h2>
                         </a>
                         <a href="#contact" class="button button-link">View Details</a>
@@ -341,11 +340,11 @@
 
                 <!-- Item 5 -->
                 <div class="portfolio__content mix game">
-                    <a href="#contact"><img src="assets/img/work5.png" alt="" class="portfolio__img"></a>
+                    <a href="#contact"><img src="assets/img/black-car-4k-o3bid1r2nwhb509v.jpg" alt="" class="portfolio__img"></a>
                     <div class="portfolio__data">
-                        <span class="portfolio__subtitle">Game Development</span>
+                        <span class="portfolio__subtitle">Picture</span>
                         <a href="#contact">
-                            <h2 class="portfolio__title">3D Trigger Colliders</h2>
+                            <h2 class="portfolio__title">?</h2>
                         </a>
                         <a href="#contact" class="button button-link">View Details</a>
                     </div>
@@ -355,9 +354,9 @@
                 <div class="portfolio__content mix game">
                     <a href="#contact"><img src="assets/img/work6.jpg" alt="" class="portfolio__img"></a>
                     <div class="portfolio__data">
-                        <span class="portfolio__subtitle">Game Development</span>
+                        <span class="portfolio__subtitle">Picture</span>
                         <a href="#contact">
-                            <h2 class="portfolio__title">New portfolio of work done for a client</h2>
+                            <h2 class="portfolio__title">?</h2>
                         </a>
                         <a href="#contact" class="button button-link">View Details</a>
                     </div>
