--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 </div>
 
                 <div class="home__social">
-                    <a href="https://www.instagram.com/" target="_blank" class="home__social-icon"><i
+                    <a href="https://www.instagram.com/westpremiumauto?igsh=MTJlNWMyazhtNzhx&utm_source=qr" target="_blank" class="home__social-icon"><i
                             class='bx bxl-instagram'></i></a>
 
                     <a href="https://facebook.com/" class="home__social-icon" target="_blank"><i
@@ -234,7 +234,7 @@
                         ?
                     </p>
 
-                    <a href="#portfolio" class="button">Know More</a>
+                    <a href="#contact" class="button">Book</a>
                 </div>
                 <!-- Service 2 -->
                 <div class="services__data">
@@ -244,7 +244,7 @@
                         ?
                     </p>
 
-                    <a href="#portfolio" class="button">Know More</a>
+                    <a href="#contact" class="button">Book</a>
                 </div>
                 <!-- Service 3 -->
                 <div class="services__data">
@@ -254,7 +254,7 @@
                         ?
                     </p>
 
-                    <a href="#portfolio" class="button">Know More</a>
+                    <a href="#contact" class="button">Book</a>
                 </div>
             </div>
 
@@ -415,20 +415,20 @@
                     <div class="contact__box">
                         <i class='bx bx-phone contact__icon'></i>
                         <h3 class="contact___title">Phone Number</h3>
-                        <span class="contact__description">?</span>
+                        <span class="contact__description">801-822-8454</span>
                     </div>
 
                     <div class="contact__box">
                         <i class='bx bx-envelope contact__icon'></i>
                         <h3 class="contact___title">Mail</h3>
-                        <span class="contact__description">?</span>
+                        <span class="contact__description">westpremiumautodetailing@gmail.com</span>
                     </div>
 
                     <div class="contact__box">
                         <i class='bx bx-chat contact__icon'></i>
                         <h3 class="contact___title">Chat</h3>
                         <div>
-                            <a href="https://wa.me/" target="_blank" class="contact__social"><i
+                            <a href="https://wa.me/+18018228454" target="_blank" class="contact__social"><i
                                     class='bx bxl-whatsapp-square'></i></a>
                             <!-- <a href="#" class="contact__social"><i class='bx bxl-telegram'></i></a>
                             <a href="#" class="contact__social"><i class='bx bxl-messenger'></i></a> -->
@@ -475,7 +475,7 @@
             <p class="footer__description">It's all in the details</p>
 
             <div class="footer__social">
-                <a href="https://instagram.com/" target="_blank" class="footer__link"><i
+                <a href="https://www.instagram.com/westpremiumauto?igsh=MTJlNWMyazhtNzhx&utm_source=qr" target="_blank" class="footer__link"><i
                         class='bx bxl-instagram'></i></a>
                 <a href="https://facebook.com/" target="_blank" class="footer__link"><i
                         class='bx bxl-facebook'></i></a>
