--- a/index.html
+++ b/index.html
@@ -364,6 +364,8 @@
             </div>
         </section>
 
+        <blockquote class="instagram-media" data-instgrm-permalink="https://www.instagram.com/westpremiumauto/?utm_source=ig_embed&amp;utm_campaign=loading" data-instgrm-version="14" style=" background:#FFF; border:0; border-radius:3px; box-shadow:0 0 1px 0 rgba(0,0,0,0.5),0 1px 10px 0 rgba(0,0,0,0.15); margin: 1px; max-width:540px; min-width:326px; padding:0; width:99.375%; width:-webkit-calc(100% - 2px); width:calc(100% - 2px);"><div style="padding:16px;"> <a href="https://www.instagram.com/westpremiumauto/?utm_source=ig_embed&amp;utm_campaign=loading" style=" color:#000; font-family:Arial, Helvetica, sans-serif; font-size:14px; line-height:17px; text-decoration:none; word-wrap:break-word;" target="_blank">West Premium Auto</a></div></blockquote><script async src="//www.instagram.com/embed.js"></script>
+
         <!--===== TESTIMONIAL =====-->
         <!-- <section class="testimonial section bd-container">
             <span class="section-subtitle">My clients saying</span>
