--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
         </section>
 
         <!--===== PORTFOLIO =====-->
-        <section class="portfolio section bd-container" id="portfolio">
+        <!--<section class="portfolio section bd-container" id="portfolio">
             <span class="section-subtitle">My recent work</span>
             <h2 class="section-title">Gallery</h2>
 
@@ -289,7 +289,6 @@
                 <span class="portfolio__item" data-filter=".game">Truck</span>
             </div>
 
-            <!-- Item 1 -->
             <div class="portfolio__container bd-grid">
                 <div class="portfolio__content mix web">
                     <a href="#contact"><img src="assets/img/work1.png" alt="" class="portfolio__img"></a>
@@ -302,7 +301,7 @@
                     </div>
                 </div>
 
-                <!-- Item 2 -->
+        
                 <div class="portfolio__content mix web">
                     <a href="#contact"><img src="assets/img/work2.jpg" alt="" class="portfolio__img"></a>
                     <div class="portfolio__data">
@@ -314,7 +313,7 @@
                     </div>
                 </div>
 
-                <!-- Item 3 -->
+    
                 <div class="portfolio__content mix ux">
                     <a href="#contact"><img src="assets/img/work3.jpg" alt="" class="portfolio__img"></a>
                     <div class="portfolio__data">
@@ -326,7 +325,6 @@
                     </div>
                 </div>
 
-                <!-- Item 4 -->
                 <div class="portfolio__content mix ux">
                     <div class="portfolio__data">
                         <span class="portfolio__subtitle">Picture</span>
@@ -338,7 +336,6 @@
                     </div>
                 </div>
 
-                <!-- Item 5 -->
                 <div class="portfolio__content mix game">
                     <a href="#contact"><img src="assets/img/black-car-4k-o3bid1r2nwhb509v.jpg" alt="" class="portfolio__img"></a>
                     <div class="portfolio__data">
@@ -350,7 +347,6 @@
                     </div>
                 </div>
 
-                <!-- Item 6 -->
                 <div class="portfolio__content mix game">
                     <a href="#contact"><img src="assets/img/work6.jpg" alt="" class="portfolio__img"></a>
                     <div class="portfolio__data">
@@ -362,7 +358,7 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section>-->
 
         <blockquote class="instagram-media" data-instgrm-permalink="https://www.instagram.com/westpremiumauto/?utm_source=ig_embed&amp;utm_campaign=loading" data-instgrm-version="14" style=" background:#FFF; border:0; border-radius:3px; box-shadow:0 0 1px 0 rgba(0,0,0,0.5),0 1px 10px 0 rgba(0,0,0,0.15); margin: 1px; max-width:540px; min-width:326px; padding:0; width:99.375%; width:-webkit-calc(100% - 2px); width:calc(100% - 2px);"><div style="padding:16px;"> <a href="https://www.instagram.com/westpremiumauto/?utm_source=ig_embed&amp;utm_campaign=loading" style=" color:#000; font-family:Arial, Helvetica, sans-serif; font-size:14px; line-height:17px; text-decoration:none; word-wrap:break-word;" target="_blank">West Premium Auto</a></div></blockquote><script async src="//www.instagram.com/embed.js"></script>
 
